[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Player/crosshair.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player/sniperscope.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/grobold_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/grobold_32.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Player/sync.svg" type="Texture" id=5]
[ext_resource path="res://Assets/Player/bulletcounticon.tres" type="Texture" id=6]
[ext_resource path="res://Assets/Player/damageoverlay.png" type="Texture" id=7]
[ext_resource path="res://Scenes/player/HUD/HUD.gd" type="Script" id=8]

[sub_resource type="GDScript" id=1]
script/source = "extends Label

func _ready():
	$ReloadSprite/AnimationPlayer.play(\"idle\")
	$ReloadSprite.visible = false

func reload(reload_time):
	$ReloadSprite/AnimationPlayer.play(\"reload\")
	$ReloadSprite.visible = true
	yield(get_tree().create_timer(reload_time), \"timeout\")
	stop_reload()

func stop_reload():
	$ReloadSprite/AnimationPlayer.play(\"idle\")
	$ReloadSprite.visible = false
"

[sub_resource type="Animation" id=2]
resource_name = "idle"

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.152941, 0.682353, 0.376471, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.172549, 0.243137, 0.313726, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("DamageIndicator:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.25 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Flash:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.929412 ) ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Flash:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.901961 ), Color( 1, 1, 1, 0 ) ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="Crosshair" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crosshair" type="Sprite" parent="Crosshair"]
position = Vector2( 32, 32 )
texture = ExtResource( 1 )

[node name="Scope" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 17.0

[node name="FPSCountLabel" type="Label" parent="VBoxContainer/Top"]
margin_right = 1024.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "FPS: 144"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 1024.0
margin_bottom = 112.0
size_flags_horizontal = 3
custom_constants/separation = 700
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Stats"]
margin_right = 167.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletIcon" type="TextureRect" parent="VBoxContainer/Stats/HBoxContainer"]
margin_bottom = 33.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoLabel" type="Label" parent="VBoxContainer/Stats/HBoxContainer"]
margin_left = 40.0
margin_right = 113.0
margin_bottom = 33.0
size_flags_horizontal = 0
size_flags_vertical = 7
custom_fonts/font = ExtResource( 4 )
text = "5 / 5"
align = 2
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReloadSprite" type="Sprite" parent="VBoxContainer/Stats/HBoxContainer/AmmoLabel"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 8, 16 )
scale = Vector2( 0.057, 0.057 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/Stats/HBoxContainer/AmmoLabel/ReloadSprite"]
anims/idle = SubResource( 2 )
anims/reload = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Stats"]
margin_left = 867.0
margin_right = 1024.0
margin_bottom = 70.0

[node name="KillCountLabel" type="Label" parent="VBoxContainer/Stats/VBoxContainer"]
margin_right = 157.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 4 )
text = "Kills: 99"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathCountLabel" type="Label" parent="VBoxContainer/Stats/VBoxContainer"]
margin_top = 37.0
margin_right = 157.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 4 )
text = "Deaths: 99"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -80.0
margin_right = 100.0
margin_bottom = -63.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
custom_fonts/font = ExtResource( 3 )
step = 1.0
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageIndicator" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 6 )
anims/flash = SubResource( 7 )
anims/unflash = SubResource( 8 )

[node name="UpdateFPSTimer" type="Timer" parent="."]
[connection signal="timeout" from="UpdateFPSTimer" to="." method="_on_UpdateFPSTimer_timeout"]
